# vrpc-forecast

./: .gitignore  README.md  pyproject.toml  slides.odp
data/: license.txt
doc/: main.tex
doc/sections/: meal_forecasting.tex  results.tex  vehicle_routing.tex
new_data/: meal_info.csv  meal_ingredients.csv
report/: .gitignore  Makefile  main.tex
report/sections/: _list.tex  data_generation.tex  project_description.tex  references.bib  results.tex  vehicle_routing.tex
slides/: slides.odp  slides.pptx
src/: common.py  forecast.py  lib.py  locations.py  main.py
src/solver/: __init__.py  common.py  simple_poly.py  subtour_elim.py
src/solver/colgen/: __init__.py  branchnprice.py  data.py  optimize.py  solver.py  subproblem.py  subproblem_cy.pyx
