[tool.poetry]
name = "meal-forecast"
version = "0.1.0"
description = ""
authors = ["Rossi Lorenzo <snowycoder@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.5.3"
click = "^8.1.3"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.0"
types-click = "^7.1.8"
prophet = "^1.1.2"
networkx = "^3.0"
gurobipy = "^10.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
